<resources>
    <string name="app_name">Winfxk Cloud</string>
    <string name="email">请输入邮箱</string>
    <string name="passwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="InputServerHost">请输入服务器地址</string>
    <string name="newfile">新建文件</string>
    <string name="upload">上传文件</string>
    <string name="setting">系统设置</string>
    <string name="rootFile">根目录</string>
    <string name="input_file_name">请输入想要保存的文件名称</string>
    <string name="back">返回</string>
    <string name="setting_item_imageview_icon">文件列表显示已缓存图片图标</string>
    <string name="setting_item_automatic_login">启动后自动登录</string>
</resources>