<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:scaleType="fitCenter"
        android:orientation="vertical"
        android:background="@drawable/login_backg"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/setting_title_margin_tb"
            android:layout_height="@dimen/setting_title_height">

        <ImageView
                android:layout_width="@dimen/setting_title_height"
                android:src="@drawable/up_page"
                android:scaleType="fitCenter"
                android:padding="@dimen/setting_title_ico_padding"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/back"
                android:layout_height="@dimen/setting_title_height" />

        <TextView
                android:layout_width="match_parent"
                android:text="@string/setting"
                android:textSize="@dimen/setting_title_text_size"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent" />
    </RelativeLayout>

    <Switch
            android:text="@string/setting_item_imageview_icon"
            android:layout_width="match_parent"
            android:background="@color/setting_item_backg"
            android:padding="@dimen/setting_item_padding"
            android:layout_marginBottom="@dimen/setting_item_margin_tb"
            android:layout_height="@dimen/setting_layout_height"
            android:textSize="@dimen/setting_item_text_size"
            android:id="@+id/switch1"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Switch
            android:text="@string/setting_item_automatic_login"
            android:layout_width="match_parent"
            android:background="@color/setting_item_backg"
            android:padding="@dimen/setting_item_padding"
            android:layout_marginBottom="@dimen/setting_item_margin_tb"
            android:layout_height="@dimen/setting_layout_height"
            android:textSize="@dimen/setting_item_text_size"
            android:id="@+id/switch2"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>