<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/dialog_background"
        android:layout_height="500dp">

    <TextView
            android:layout_width="match_parent"
            android:id="@+id/textView2"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="#000000"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/textView1"
            android:layout_marginStart="5dp"
            android:layout_below="@id/textView2"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:gravity="start|center_vertical"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <ListView
            android:layout_below="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_above="@+id/editText1"
            android:id="@+id/listView1"
            android:layout_height="match_parent" />

    <EditText
            android:layout_width="match_parent"
            android:id="@+id/editText1"
            android:hint="@string/input_file_name"
            android:layout_above="@+id/line1"
            android:textSize="12sp"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:inputType="text" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:id="@+id/line1"
            android:orientation="horizontal"
            android:layout_height="60dp">

        <Button
                android:id="@+id/button1"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/dialog_white"
                android:text="@string/dialog_ok"
                android:layout_width="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:background="@drawable/dialog_white"
                android:layout_width="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>