<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_backg"
            android:contentDescription="@string/app_name"
            android:padding="0dp"
            android:id="@+id/backg"
            android:scaleType="fitXY"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
            android:layout_height="300dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="50dp"
                    android:contentDescription="@string/app_name"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/email" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:autofillHints="emailAddress"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editText1" />
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:background="#55000000"
                android:layout_height="1dp" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp">

            <ImageView
                    android:layout_width="50dp"
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/app_name"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/passwd" />

            <EditText
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:autofillHints="password"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/passwd"
                    android:id="@+id/editText2" />

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pass_noshow"
                    android:scaleType="fitCenter"
                    android:padding="10dp"
                    android:contentDescription="@string/app_name"
                    android:alpha="0.5"
                    android:id="@+id/imageView3"
                    android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:background="#55000000"
                android:layout_height="1dp" />

        <Button
                android:layout_marginTop="50dp"
                android:layout_width="180dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:id="@+id/button1"
                android:background="@drawable/button1"
                android:layout_gravity="center_horizontal"
                android:layout_height="45dp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentBottom="true">

        <ImageButton
                android:layout_width="25dp"
                android:src="@drawable/tab_server"
                android:scaleType="fitCenter"
                android:id="@+id/imageButton2"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="25dp"
                android:background="@android:color/transparent"
                android:layout_height="25dp" />

        <ImageButton
                android:layout_width="25dp"
                android:src="@drawable/sign"
                android:scaleType="fitCenter"
                android:contentDescription="@string/app_name"
                android:id="@+id/imageButton3"
                android:background="@android:color/transparent"
                android:layout_height="25dp" />
    </LinearLayout>
</RelativeLayout>